# coinnect

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MORNING-BRIEF.md  OVERNIGHT-REPORT.md  README.md  SECURITY.md  pyproject.toml  tailwind.config.js
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_provider.yml
clawhub/: SKILL.md
data/: exchange_profiles.json
docs/: CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  GOVERNANCE.md  LISTING_STANDARD.md  PROTOCOL.md  SUSTAINABILITY.md  clawhub-skill.json  devto-article.html  whitepaper.md  wise-email.html
docs/api/: openapi.yaml
docs/changelog/: 2026-03-22.md
docs/integrations/: agent-networks.md  clawhub-skill.md
scripts/: upload_hf.py
src/coinnect/: main.py  mcp_server.py  seo_pages.py  x402_middleware.py
src/coinnect/api/: admin_routes.py  routes.py
src/coinnect/db/: analytics.py  history.py  keys.py
src/coinnect/exchanges/: ccxt_adapter.py  direct_api_adapter.py  remittance_adapter.py  wise_adapter.py  yellowcard_adapter.py
src/coinnect/routing/: engine.py
src/coinnect/static/: admin.html  i18n.js  index.html  llms.txt  sitemap.xml  tailwind.css
tests/: test_routing.py
